update sms +edit restaurant

--- a/templates/restaurant/_delete_form.html.twig
+++ b/templates/restaurant/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_restaurant_delete', {'idRestau': restaurant.idRestau}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ restaurant.idRestau) }}">
-	<button class="col-2 btn btn-danger">Delete</button>
+	<button class="col-2 btn btn-danger my-2">Delete</button>
 </form>
