--- a/templates/restaurant/_form.html.twig
+++ b/templates/restaurant/_form.html.twig
@@ -23,7 +23,7 @@
 	</div>
 
 	<div class="mt-3">
-		<button type="submit" class="btn btn-success">Save</button>
+		<button type="submit" class="col-2 btn btn-success">Save</button>
 	</div>
 </div>
 
